# Self-Correcting-Explainable-Translation-Agent

./: .gitignore  CLAUDE.md  README.md
01_explainable_translate_agent/: .gitignore  test_workflow.py
01_explainable_translate_agent/config/: README.md  languages.yaml  models.yaml  observability.env  pricing.json  thresholds.yaml
01_explainable_translate_agent/config/risk_profiles/: DEFAULT.yaml  README.md
01_explainable_translate_agent/data/: README.md
01_explainable_translate_agent/data/glossaries/: README.md
01_explainable_translate_agent/data/risk_profiles/: README.md  US.yaml
01_explainable_translate_agent/data/style_guides/: README.md
01_explainable_translate_agent/docs/: IMPLEMENTATION_GUIDE.md  observability.md  requirements-mapping.md  state-walkthrough.md
01_explainable_translate_agent/examples/: output_sample.json
01_explainable_translate_agent/examples/batch/: faq.json  mixed.json
01_explainable_translate_agent/examples/single/: default.json  faq.json  legal.json  ui.json
01_explainable_translate_agent/skills/: README.md
01_explainable_translate_agent/skills/accuracy-evaluator/: SKILL.md
01_explainable_translate_agent/skills/compliance-evaluator/: SKILL.md
01_explainable_translate_agent/skills/quality-evaluator/: SKILL.md
01_explainable_translate_agent/skills/translator/: SKILL.md
01_explainable_translate_agent/sops/: README.md  __init__.py  evaluation_gate.py  regeneration.py
01_explainable_translate_agent/src/: __init__.py
01_explainable_translate_agent/src/graph/: README.md  nodes.py  (+2 more)
setup/: create_env.sh  pyproject.toml
(+34 files in other folders)
