[project]
name = "evaluate-translation"
version = "0.1.0"
description = "Translation Evaluation using MetricX-24, COMET-KIWI, and Claude 4.5 Family"
readme = "README.md"
authors = [
    {name = "evaluate-translation", email = "your-email@example.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "torch>=2.0.0",
    "transformers>=4.30.2",
    "sentencepiece>=0.2.0",
    "accelerate>=0.20.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "strands-agents[otel]>=0.1.0",
    "jinja2>=3.1.0",
    "aws-opentelemetry-distro>=0.5.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]